# save_coro

./: .gitignore  CMakeLists.txt  main.cpp  test_coro1.cpp  test_interaction.cpp
include/: game.hpp  generator.hpp  iostream_interface.hpp  list.hpp  minimax.hpp  ranges.hpp  ring.hpp  saveable_coroutine.h  saveable_coroutine.hpp  task.h  task.hpp  tictac.hpp
js/: hold-em.js
test/: CMakeLists.txt  test_ranges.cpp
